--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
- <a href="docs/index.htm">ゲーム購入？</a>
+
+CAT MARIO
+-----------------
+
+The game CatMario, ported to HTML5 for mobile devices.
+
+
+こちらは日本語訳をしたしょぼんです。
+If you want to play this game(本ゲーム):
+<a href="docs/index.htm">https://pokemogukunn.github.io/pokesutoppu.github.io/docs/index.htm</a>
+To play the game, Visit(元ネタ):
+<a href="http://tiwb.github.io/catmario/">http://tiwb.github.io/catmario/</a>
+これ元々のもの
