--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 
-CAT MARIO
------------------
-
-The game CatMario, ported to HTML5 for mobile devices.
+CAT MARIO<br>
 
 
-こちらは日本語訳をしたしょぼんです。
+The game CatMario, ported to HTML5 for mobile devices.<br>
+
+
+こちらは日本語訳をしたしょぼんです。<br>
 If you want to play this game(本ゲーム):
-<a href="docs/index.htm">https://pokemogukunn.github.io/pokesutoppu.github.io/docs/index.htm</a>
+<a href="docs/index.htm">https://pokemogukunn.github.io/pokesutoppu.github.io/docs/index.htm</a><br>
 To play the game, Visit(元ネタ):
-<a href="http://tiwb.github.io/catmario/">http://tiwb.github.io/catmario/</a>
-これ元々のもの
+<a href="http://tiwb.github.io/catmario/">http://tiwb.github.io/catmario/</a><br>
+これ元々のものですチェックしてね。<br>
+<a href="https://github.com/pokemogukunn/pokesutoppu.github.io/">これのソースコード</a><br>
